# Terrazipay-python

./: .env.example  .gitignore  CONTRIBUTING.md  README.cn.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: agent_doc.cn.md  agent_doc.md  quick_start.cn.md  quick_start.md  x402.cn.md  x402.md
src/terrazip/adapters/alipay/: README.cn.md  __init__.py  alipay_config.py  alipay_driver.py
src/terrazip/adapters/paypal/: README.cn.md  __init__.py  paypal_config.py  paypal_driver.py
src/terrazip/ai/: README.cn.md  README.md  graph.py  prompts.py  state.py  tools_example.py
src/terrazip/cores/: __init__.py  application.py  engine.py  manager.py
src/terrazip/models/: __init__.py  adapter.py  config.py  order.py
src/terrazip/utils/: __init__.py  exceptions.py  facilitors.py  httpxs.py  loggers.py  signatures.py  tracebackers.py
src/terrazip/x402_mock/: README.cn.md  README.md
